# crewai-sports-news-agency

./: pyproject.toml
crewai_sports_news_agency/: api.py  app.py
tests/: test_db_connection.py
utilities/: postgresql_utils.py
